# remu

./: .gitignore  Cargo.toml  README.md  const_gidx.s  copy.sh  filelist.txt  prg.py  run.sh  target.s  x.py
.github/workflows/: test.yml
extra/: analysis.py  bitfields.py
src/: allocator.rs  alu_modifiers.rs  cpu.rs  dtype.rs  helpers.rs  lib.rs  main.rs  memory.rs  ops.rs  rdna3.rs  state.rs  thread.rs  utils.rs  work_group.rs
tests/: E_4.c  E_4.s  README.md  add_2_2_0.c  add_2_2_0.s  add_a_b.c  global_store.c  global_store.s  s_endpgm.s
tests/misc/: README.md  test_add_const_index.c  test_add_const_index.s
tests/test_dtype/: 0.c  0.s  1.c  1.s  10.c  10.s  100.c  100.s  101.c  101.s  102.c  102.s  103.c  103.s  104.c  104.s  105.c  105.s  106.c  106.s  107.c  107.s  108.c  108.s  109.c  109.s  11.c  11.s  110.c  110.s  111.c  111.s  112.c  112.s  113.c  113.s  114.c  114.s  115.c  115.s  (+824 more)
tests/test_ops/: test_abs.c  test_abs.s  test_abs_1.c  test_abs_2.c  test_abs_3.c  test_abs_4.c  test_add.c  test_add.s  test_add3.c  test_add3.s  test_add3_1.c  test_add_1.c  test_add_2.c  test_add_number.c  test_add_number.s  test_add_number_1.c  test_add_simple.c  test_add_simple.s  test_arange.c  test_arange.s  test_arange_1.c  test_arange_2.c  test_arange_3.c  test_arange_big.c  test_arange_big.s  test_arange_simple.c  test_arange_simple.s  test_argmax.c  test_argmax.s  test_argmax_1.c  test_argmax_10.c  test_argmax_11.c  test_argmax_2.c  test_argmax_3.c  test_argmax_4.c  test_argmax_5.c  test_argmax_6.c  test_argmax_7.c  test_argmax_8.c  test_argmax_9.c  (+765 more)
