[package]
name = "remu"
version = "0.1.0"
edition = "2021"

[lib]
name = "remu"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "remu-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
half = { version = "2.3.1", features = ["num-traits"] }
lazy_static = "1.4.0"
ndarray = "0.15.6"
num-traits = "0.2.17"

[dev-dependencies]
float-cmp = "0.9.0"
